Fixed the spacing at the bottom for larger screens

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction:column;
     font-family: Roboto, sans-serif;
     margin:0;
-    font-size:
+    min-height:100vh;
 }
 
 
@@ -150,7 +150,7 @@ strong{
     background-color:rgb(23, 71, 102);
     text-align:center;
     padding:15px;
-    margin:0;
+    margin-top:auto;
     color:white;
 }
 /* 
